# CPP_Learning_Code

./: .gitignore
chap-02/: 1-first_class.cpp  2-constructor.cpp  3-clone.cpp
chap-02/4-rectangle/: Rectangle.cpp  Rectangle.h  main.cpp
chap-02/5-polygon/: Polygon.cpp  Polygon.h  main.cpp
chap-03/: CMakeLists.txt
chap-03/1-lifespan/: Box.cpp  main1.cpp
chap-03/3-allocation/: Cat.cpp  Cat.h
chap-03/4-move/: Move.cpp
chap-03/Q-Resources/: ResourceManager.cpp  ResourceManager.h
chap-04/: CMakeLists.txt
chap-04/1-hierarchy/: Boss.cpp  Boss.h  Employee.h  Intern.cpp  Intern.h  Staff.cpp  Staff.h
chap-04/2-farm/: Animal.h  Cat.h  Chicken.h  Cow.h  Dog.h  FarmHouse.cpp  Opera.h
chap-04/3-vehicles/: Car.h  FlyingCar.h  Vehicle.h
tp-01/: CMakeLists.txt  Ex4.cpp  TP1.md  ex3_q1.cpp  translator.cpp
tp-02/: CMakeLists.txt  Event.h  Reminders.cpp  TP2.md
tp-02/Clock/: Clock.cpp  Clock.h  MinuteHand.cpp  MinuteHand.h  SecondHand.cpp  SecondHand.h
tp-02/Histogram/: Histogram.cpp  Histogram.h  main.cpp
tp-03/: CMakeLists.txt
tp-03/Pokemons/: PC.cpp  PC.h  Pokeball.h  Pokemon.h  Tests.cpp  Trainer.h
tp-04/: TP4.md
tp-04/PhoneCalls/: HomePhone.h  Main.cpp  MobilePhone.h  Person.h  Phone.h
tp-04/Shapes/: circle.hpp  line.hpp  line_seg.hpp  main.cpp  point.hpp  rectangle.hpp  shape.hpp
